k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-scheduler
  labels:
    name: task-scheduler
